# daisy

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: go-ci.yml  integration-tests.yml  rust-ci.yml
configs/: connection_profiles.yaml  logging.yaml  usb.yaml  webrtc.yaml
docker/: Dockerfile.go  Dockerfile.rust  docker-compose.usb.yml  docker-compose.yml
docs/: api.md  architecture.md  connection_optimization.md  performance.md  protocol.md  setup.md  troubleshooting.md  usb_setup.md
drivers/windows/network/: rndis_setup.bat
drivers/windows/usb_drivers/: README.md  install.bat
go-server/: go.mod  go.sum
go-server/api/: openapi.yaml
go-server/api/proto/: connection.proto  control.proto  session.proto  signaling.proto  usb.proto
go-server/cmd/server/: main.go
go-server/internal/api/: routes.go  server.go
go-server/internal/api/handlers/: config.go  connection.go  diagnostics.go  health.go  metrics.go  pairing.go  session.go  usb.go
go-server/internal/api/middleware/: auth.go  cors.go  logging.go  ratelimit.go
go-server/internal/app/: app.go
go-server/internal/auth/: authenticator.go  pairing_code.go  token.go  usb_trust.go
go-server/internal/bridge/: connection_sync.go  ipc.go  messages.go  rust_client.go
go-server/internal/config/: config.go  connection_profiles.go  defaults.go  validation.go
go-server/internal/discovery/: advertiser.go  connection_info.go  discovery_manager.go  mdns.go  network_analyzer.go  resolver.go  usb_detector.go  usb_scanner.go
go-server/internal/monitoring/: connection_metrics.go  health.go  logger.go  metrics.go  tracer.go
go-server/internal/session/: cleanup.go  connection_session.go  manager.go  session.go  store.go
go-server/internal/signaling/: connection_negotiator.go  handler.go  messages.go  router.go  server.go
go-server/internal/streaming/: bandwidth_monitor.go  connection_optimizer.go  coordinator.go  latency_tracker.go  quality_adapter.go  reconnection.go  stats_collector.go
go-server/internal/usb/: detector.go  device.go  device_watcher.go  ios_lockdown.go  libimobiledevice.go  manager.go  network_bridge.go
go-server/pkg/protocol/: control.go  messages.pb.go  signaling.go  usb.go
go-server/pkg/types/: client.go  connection.go  display.go  stream.go  types.go  usb.go
go-server/tests/e2e/: flow_test.go  usb_flow_test.go
go-server/tests/integration/: session_test.go  signaling_test.go  usb_test.go
protocol/: README.md  connection.md  control.md  signaling.md  usb.md
protocol/proto/: common.proto  connection.proto  input.proto  stream.proto  usb.proto
rust-capture/: Cargo.toml
rust-capture/src/: lib.rs  main.rs
rust-capture/src/utils/: mod.rs
scripts/: build_all.sh  install_deps.sh  run_dev.sh  setup_usb.sh  test_connection.sh
scripts/docker/: build.sh  run.sh
tools/connection_tester/: Cargo.toml
tools/connection_tester/src/: main.rs
tools/latency_profiler/: Cargo.toml
tools/latency_profiler/src/: main.rs
tools/usb_debugger/: go.mod  main.go
